# caws

./: .gitmodules  Readme  Readme.md  pyproject.toml
bookmarklet/: README.md  bookmark.js  bookmark.min.js  bookmarklet  server.py
caws/: __init__.py  database.py  endpoint.py  executor.py  features.py  path.py  strategy.py  task.py  transfer.py  utils.py
caws/models/: transfer_models.json
caws/predictors/: base.py  energy_prediction.py  energy_predictors.py  features.py  measure_transfer.py  predictor.py  time_predictors.py  transfer_config.json  transfer_predictors.py
caws/strategy/: base.py  cluster_mhra.py  clustering_mhra.py  mhra.py  round_robin.py
caws_experiments/: build_profile.py  fetch_database.py  runner.py  utils.py
caws_experiments/benchmarks/: LICENSE.md  cholesky.py  matmul.py  molecular_dynamics.py  requirements.txt  utils.py
caws_experiments/benchmarks/bfs/: __init__.py  benchmark.py  inputs.py
caws_experiments/benchmarks/compression/: __init__.py  benchmark.py  inputs.py
caws_experiments/benchmarks/dna/: __init__.py  benchmark.py  dna_visualization.py  inputs.py
caws_experiments/benchmarks/inference/: __init__.py  benchmark.py  inputs.py
caws_experiments/benchmarks/molecular_design/: chemfunctions.py
caws_experiments/benchmarks/mst/: __init__.py  benchmark.py  inputs.py
caws_experiments/benchmarks/pagerank/: __init__.py  benchmark.py
caws_experiments/experiments/: overhead.py  prediction_accuracy.py  scheduler_eval.py
docs/: sample_config.py
experiments/: build_profile.py
experiments/benchmarks/: LICENSE.md  inference.py  multimedia.py  scientific.py  utilities.py
notebooks/: Energy Analysis.ipynb  Plotting.ipynb  prediction_results.csv  prediction_results_desktop.csv  results.csv  scheduler_comparison.jsonl  scheduler_eval.jsonl  scheduler_overhead.jsonl  scheduler_sensitivity.jsonl
notebooks/results/: molecular_design_eval.jsonl  scheduler_comparison.jsonl  scheduler_overhead.jsonl  scheduler_sensitivity.jsonl  scheduler_sensitivity_w_faster.jsonl  sebs_task_energy.csv
reproducibility/: endpoint_environment.yaml  experiment_config.json  packages.txt
reproducibility/endpoint_configs/: desktop_config.py  midway_config.py  theta_config.py  theta_config_no_monitoring.py
services/: deploy.sh  docker-compose.yaml
test/: conftest.py  pytest.ini  test_basic.py  test_carbon.py  test_caws_db.py  test_connectivity.py  test_features.py  test_monitoring.py  test_predictor.py  test_strategy.py  test_transfer.py  util_funcs.py  utils.py
(+9 files in other folders)
