[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "caws"
authors = [
    {name = "Alok Kamatar", email = "alokvk2@uchicago.edu"},
]
description = "Carbon Aware Workflow Scheduling built on top of Globus Compute Service"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "globus-compute-sdk @ git+https://github.com/AK2000/funcX@power_monitoring_new#subdirectory=compute_sdk",
    "sqlalchemy",
    "geoip2",
    "click",
    "scikit-learn"
]
dynamic = ["version"]

[tool.setuptools]
packages = ["caws", "caws_experiments"]
