[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "caws"
authors = [
    {name = "Alok Kamatar", email = "alokvk2@uchicago.edu"},
]
description = "Carbon Aware Workflow Scheduling built on top of Globus Compute Service"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "globus-compute-sdk @ git+https://github.com/AK2000/funcX@power_monitoring_new#subdirectory=compute_sdk",
    "psycopg2",
    "sqlalchemy",
    "geoip2",
    "click",
    "scikit-learn"
    "fancyimpute @ git+https://github.com/iskandr/fancyimpute.git"
]
dynamic = ["version"]

[project.optional-dependencies]
all = ['caws[dev, endpoint]']
dev = ['black', 'pandas', 'pytest', 'scikit-learn']
endpoint = ["parsl@git+https://github.com/AK2000/parsl@power-monitoring", "globus-compute-endpoint@git+https://github.com/AK2000/funcX@power_monitoring_new#subdirectory=compute_endpoint",
]

[tool.setuptools]
packages = ["caws", "caws_experiments"]
